Wed Feb  1 23:25:03 GMT 2012  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.11.2 and Gnulib 20111211-stable.

	* gnulib: Import closedir, fstat, and opendir modules.

Wed Nov  2 14:33:18 GMT 2011  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Sun Oct  9 23:32:41 BST 2011  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c (null_hashtable_free): Use ATTRIBUTE_UNUSED to
	  appease compiler warnings rather than assigning an argument to
	  itself.
	* src/mandb.c (cleanup_sigsafe, cleanup): Likewise.

Sun Oct  9 23:14:11 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/man.c (get_roff_line_length, add_roff_line_length): Only
	  compile if either TROFF_IS_GROFF or HEIRLOOM_NROFF is defined.
	  Spotted by cppcheck.

Sun Oct  9 22:50:36 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (add_to_dirlist): Read lines from configuration file
	  using getline rather than fgets with a fixed-size buffer.

Sun Oct  9 22:42:00 BST 2011  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import getline module (used in lib/encodings.c).

Sun Oct  9 22:26:15 BST 2011  Colin Watson  <cjwatson@debian.org>

	* man/es/man8/accessdb.man8: Remove; this is simply an out-of-date
	  copy of the English page.  Reported by Křištof Želechovski.
	* man/es/Makefile.am (man8_MANS): Remove man8/accessdb.8.

Sun Oct  9 22:21:19 BST 2011  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20110908-stable.

Sun Oct  9 00:24:22 BST 2011  Peter Schiffer  <pschiffe@redhat.com>

	* src/filenames.c (filename_info): Zero-initialise the contents of
	  info to avoid a double-free in store_descriptions (Fedora bug
	  #702904).
	* src/tests/mandb-6: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add mandb-6.
	* NEWS: Document this.

Sun Oct  9 00:16:25 BST 2011  Colin Watson  <cjwatson@debian.org>

	* NEWS: Update.

Sat Oct  8 23:34:26 BST 2011  Colin Watson  <cjwatson@debian.org>
