@@ -221,6 +221,7 @@
 #  define BUNZIP2 "@bunzip2@"
 #  define UNLZMA "@unlzma@"
 #  define UNXZ "@unxz@"
+#  define UNLZIP "@unlzip@"
 #endif /* COMP_SRC */
 
 /*-----------------------------------------------------------------------*/
