@@ -24,6 +24,9 @@ Major changes since man-db 2.6.0.2:
 	  http://www.brynosaurus.com/cachedir/ ("Cache Directory Tagging
 	  Standard").
 
+	o Add support for Lzip-compressed manual pages, thanks to Matias A.
+	  Fonzo.
+
 man-db 2.6.0.2 (13 April 2011)
 ==============================
 
